IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/13/14: In eTomo - Reconstruction Setup, using the piece list file (when
available) to open montaged raw stacks (In 4.7).(Bug# 1801)

6/6/14: Made Extractpieces and Extracttilts take information from an
associated .mdoc file automatically as a fallback and work with metadata in an
HDF file also; made Extracttilts able to extract the text strings for any
metadata in .modc or HDF file; made 3dmod able to take piece coordinates from
an HDF file.

6/6/14: Added script for copying header of MRC file.

6/5/14: Made 3dmod automatically get piece coordinates from a .pl file
with same root name as single image file entered (In 4.7).

6/5/14: Fixed Tomopitch so its output is parsable by eTomo for shift or
thickness more than 1000 (In 4.7).

6/3/14: Made 3dmod automatically look for piece coordinates in an associated
.mdoc file and eliminated -pm option, which was not in the man page (In 4.7).

5/26/14: IMOD_4-8-6
5/21/14: Stopped Makecomfile from giving error when run with a bead size of 0
(In 4.7).

5/14/14: Fixed transparent background when saving model montage (In 4.7). 

5/8/14: Added an option to Clip to specify a defect correction file for K2
images.

5/4/14: IMOD_4-7-5
5/4/14: In eTomo fixed the icon for warning message popups (In 4.7).
(Bug# 1797)

5/1/14: Fixed ability to run certain steps on single axis datasets in a
Windows installation without Cygwin (In 4.7).

5/1/14: Fixed setting of IMOD_CALIB_DIR by installer for Windows without
Cygwin (In 4.7).

4/30/14: IMOD_4-8-5
4/30/14: Made Mrc2tif able to read all file types including JPEG/PNG/BMP.

4/30/14: Fixed Tiltxcorr when using shift limits (In 4.7).

4/27/14: Changed Squeezevol to allow odd output sizes in X and Z (In 4.7).

4/16/14: IMOD_4-8-4
4/16/14: Fixed loss of bottom and top lines in interpolation routine when
there is 0 or 180 degree rotation (In 4.7).
